@@ -40,7 +40,7 @@ class Umipmap(c.LittleEndianStructure):
             mip.data = f.read(mip.data_size)
         mip.width = read_uint32(f)
         mip.height = read_uint32(f)
-        if version in ['4.27', 'bloodstained']:
+        if version in ['4.25', '4.27', 'bloodstained']:
             read_const_uint32(f, 1)
         check(mip.one, 1)
         check(mip.data_size, mip.data_size2)
@@ -71,5 +71,5 @@ class Umipmap(c.LittleEndianStructure):
 
         write_uint32(f, self.width)
         write_uint32(f, self.height)
-        if self.version in ['4.27', 'bloodstained']:
+        if self.version in ['4.25', '4.27', 'bloodstained']:
             write_uint32(f, 1)
