@@ -1,5 +1,6 @@
 ver 0.2.3
 - Added support for GUI
+- Added support for UE4.25 games
 - Made folder loader recursive
 - Modified data structure
 - Improved readability
